--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
           <div>
             <h2 class="about__subtitle">The Person Behind the Screen </h2>
             <p class="about__text">
-  Hi, I’m Sofia Gabrielle Escalona, a Computer Science student at New Mexico State University, learning the art of front-end development, software design, and AI-driven systems through hands-on projects and classes. I grew up speaking English, Tagalog, Hiligaynon, and Cebuano, which helped me appreciate how 
-  communication and design connect people. My recent project, Nutrition Guardian AI, explores how users perceive trust and credibility in
-   dependable and unreliable chatbots about meat science. I enjoy creating clean, meaningful designs and building projects that blend 
-   creativity with technology.
+Hi, I’m Sofia Gabrielle Escalona, a Computer Science graduate from New Mexico State University with a focus on 
+front-end development, software design, and AI-driven systems built through hands-on projects and coursework. I grew up speaking English, Tagalog, Hiligaynon, and Cebuano, which shaped how I think
+ about communication, accessibility, and human-centered design.
             </p>
           </div>
         </div>
