added main contributions

--- a/playlist-cover.html
+++ b/playlist-cover.html
@@ -109,8 +109,8 @@ a workflow where users generate first, then personalize.
 <h2>Prototyping Phase</h2>
 <p>We designed two low-fidelity prototypes:</p>
 <ul>
-<li><b>Design A – Step-by-Step Guided Flow</b>: Connect → Generate → Customize → Download</li>
-<li><b>Design B – Dashboard Layout</b>: All tools visible at once</li>
+<li><b>1. Design A – Step-by-Step Guided Flow</b>: Connect → Generate → Customize → Download</li>
+<li><b>2. Design B – Dashboard Layout</b>: All tools visible at once</li>
 </ul>
 <p>
 Participants used printed/digital mockups and completed tasks like connecting a playlist, generating a cover,
@@ -150,29 +150,42 @@ Sessions captured confusion points and behavior patterns.
 
 <p><b>What worked well:</b></p>
 <ul>
-<li>Smooth playlist connection</li>
-<li>AI generation was exciting & matched playlist vibe</li>
-<li>Downloading was clear and quick</li>
+<li>- Smooth playlist connection</li>
+<li>- AI generation was exciting & matched playlist vibe</li>
+<li>- Downloading was clear and quick</li>
 </ul>
 
 <p><b>Challenges:</b></p>
 <ul>
-<li>Customization UI caused confusion</li>
-<li>Buttons not clearly labeled</li>
-<li>Users expected more styling options or draggable elements</li>
+<li>- Customization UI caused confusion</li>
+<li>- Buttons not clearly labeled</li>
+<li>- Users expected more styling options or draggable elements</li>
 </ul>
 
 <p><b>Next Iterations:</b></p>
 <ul>
-<li>Guide customization more clearly with labels/tooltips</li>
-<li>Improve visibility of styling features</li>
-<li>Offer mood/color presets</li>
+<li>- Guide customization more clearly with labels/tooltips</li>
+<li>- Improve visibility of styling features</li>
+<li>- Offer more mood/color presets</li>
+<li>- Allow other apps besides Spotify to utilize the website </li>
 </ul>
 
 <p>
 Overall, the main interaction flow is intuitive and enjoyable. Enhancing clarity 
 in the customization phase will improve user confidence and creativity.
 </p>
+</section>
+
+<section>
+<h2>My Main Contributions</h2>
+<ul>
+  <li>- Integrated Cloudflare Workers AI for album cover generation</li>
+  <li>- Implemented Spotify login and logout with playlist access</li>
+  <li>- Connected backend logic for AI requests and data handling</li>
+  <li>- Added download and sharing functionality for Windows users</li>
+  <li>- Debugged, tested, and documented the project</li>
+</ul>
+
 </section>
 
 <section>
